--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
   
   <footer>
    <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   <li><a href="mailto:siew.yan.hoh@cern.ch">email</a></li>
+   <li><a href="https://siewyan.github.io/">siewyan.github.io/</a></li>
    </ul>
   </footer>
   </body>
