--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ page.title }}</title>
+    <title>{<link rel="icon" href="https://engineering.unl.edu/images/CompleteEngineer/civic-service-CIRCLE.png">{ page.title }}</title>
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   
