--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{<link rel="icon" href="images/detector.png">{ page.title }}</title>
+    <link rel="icon" href="images/detector.png">
+    <title>{{ page.title }}</title>
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   
