--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ ul.posts li { list-style: none; }
 .cv address, .cv p { font-size: 1.2em; }
 .cv .download { float: right; font-size: .8em; text-transform: uppercase; }
 
-pre code {
+code {
   background-color: #eee;
   border: 1px solid #999;
   display: block;
