--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,14 @@
     <title>{{ page.title }}</title>
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  
+    <script src="http://home.fnal.gov/~shoh/webstyle/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <!--
+    This will find and highlight code inside of <pre><code> tags; it tries to detect the language automatically. 
+    If automatic detection doesn’t work for you, you can specify the language in the class attribute:
+    <pre><code class="html">...</code></pre> 
+    -->
+    
   </head>
 
 
