--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+
+<link rel="stylesheet" type="text/css" href="/css/main.css">
+    <script src="http://home.fnal.gov/~shoh/webstyle/highlight/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+
 <h1>{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
