--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
     <title>{{ page.title }}</title>
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <script src="http://home.fnal.gov/~shoh/webstyle/highlight/highlight.pack.js"></script>
+    <!--<script src="http://home.fnal.gov/~shoh/webstyle/highlight/highlight.pack.js"></script>-->
+    <script src="highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <!--
     This will find and highlight code inside of <pre><code> tags; it tries to detect the language automatically. 
