--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,14 @@
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <!--<script src="http://home.fnal.gov/~shoh/webstyle/highlight/highlight.pack.js"></script>-->
-    <script src="highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
     <!--
     This will find and highlight code inside of <pre><code> tags; it tries to detect the language automatically. 
     If automatic detection doesn’t work for you, you can specify the language in the class attribute:
     <pre><code class="html">...</code></pre> 
     -->
+    <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     
   </head>
 
