--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@ pre {
         white-space: pre-wrap;
         white-space: -moz-pre-wrap;
         white-space: -o-pre-wrap;
+        background-color: #eee;
+        border: 1px solid #999;
+        display: block;
+        padding: 20px;
 }       
     
 code {
