--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ ul.posts li { list-style: none; }
 
 pre {
         font-family: "Courier 10 Pitch", Courier, monospace;
-        font-size: medium;
+        font-size: small;
         line-height: 100%;
         white-space: pre;
         white-space: pre-wrap;
@@ -56,7 +56,7 @@ pre {
     
 code {
         font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-        font-size: medium;
+        font-size: small;
         line-height: 100%;
         white-space: pre;
         white-space: pre-wrap;
