--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
   
   <footer>
    <ul>
-   <li><a href="mailto:siew.yan.hoh@cern.ch">email</a></li>
+   <li><a href="mailto:siew.yan.hoh@cern.ch">siew.yan.hoh@cern.ch</a></li>
    <li><a href="https://siewyan.github.io/">siewyan.github.io/</a></li>
    </ul>
   </footer>
