--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,8 @@
   <footer>
    <ul>
    <li><a href="mailto:siew.yan.hoh@cern.ch">siew.yan.hoh@cern.ch</a></li>
+   <li><a href="mailto:shoh@fnal.gov">shoh@fnal.gov</a></li>
+   <li><a href="mailto:SiewYan.Hoh@pd.infn.it">SiewYan.Hoh@pd.infn.it</a></li>
    <li><a href="https://siewyan.github.io/">siewyan.github.io/</a></li>
    </ul>
   </footer>
